added todo component - renderig each todo item

--- a/react-todo-list/src/index.css
+++ b/react-todo-list/src/index.css
@@ -54,18 +54,18 @@ body {
   width: 100%;
 }
 
-.task {
+.todo {
   background: #f4f4f4;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
 }
 
-.task.reminder {
+.todo.reminder {
   border-left: 5px solid green;
 }
 
-.task h3 {
+.todo h3 {
   display: flex;
   align-items: center;
   justify-content: space-between;
